Add "warning" to README.md and minor refactoring; Bump plugin versions